--- a/Vista/menuCliente/css/tienda.css
+++ b/Vista/menuCliente/css/tienda.css
@@ -32,7 +32,7 @@ button:active{
 }
 
 .id{
-    background-image: url("img/fondoProductos.png");
+    /* background-image: url("img/fondoProductos.png"); */
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center; 
@@ -52,9 +52,10 @@ hr{
 }
 
 body{
-    background-attachment: fixed;
-    background-image: url("img/fondo.jpg");
-    background-size: auto;
+    /* background-attachment: fixed; */
+    background-image: url("img/FondoMusica.jpg");
+    background-size:contain;
+    background-position: center;
     background-repeat: no-repeat;
 }
 
