--- a/Vista/menuCliente/css/pago.css
+++ b/Vista/menuCliente/css/pago.css
@@ -1,6 +1,6 @@
 body{
     min-height: 100vh;
-    background-color: rgb(0, 0, 34);
+    background-color:antiquewhite;
     font-size: 0.8rem;
 }
 .card{
